--- a/src/app/dashboard/video-list/video-list.component.html
+++ b/src/app/dashboard/video-list/video-list.component.html
@@ -1,4 +1,8 @@
-<div class="card teal" *ngFor="let video of videoList">
+<div class="card teal"
+  *ngFor="let video of videoList"
+  (click)="selectVideo(video.id)"
+  [class.lighten-4]="video.id !== selectedVideoId"
+>
   <div class="card-content">
     <span class="card-title">{{ video.title }}</span>
     <p>{{ video.author }}</p>
