--- a/src/app/dashboard/video-dashboard/video-dashboard.component.html
+++ b/src/app/dashboard/video-dashboard/video-dashboard.component.html
@@ -1,3 +1,3 @@
-<jb-video-list></jb-video-list>
+<jb-video-list [videoList]="videos"></jb-video-list>
 <jb-video-player></jb-video-player>
 <jb-stat-filters></jb-stat-filters>
