--- a/src/app/dashboard/video-list/video-list.component.html
+++ b/src/app/dashboard/video-list/video-list.component.html
@@ -1,10 +1,6 @@
-<div class="card teal"
+<jb-video-card
   *ngFor="let video of videoList"
+  [video]="video"
+  [selected]="video.id === selectedVideoId"
   (click)="selectVideo(video.id)"
-  [class.lighten-4]="video.id !== selectedVideoId"
->
-  <div class="card-content">
-    <span class="card-title">{{ video.title }}</span>
-    <p>{{ video.author }}</p>
-  </div>
-</div>
+></jb-video-card>
