--- a/src/app/dashboard/video-list/video-list.component.html
+++ b/src/app/dashboard/video-list/video-list.component.html
@@ -2,5 +2,5 @@
   *ngFor="let video of videoList"
   [video]="video"
   [selected]="video.id === selectedVideoId"
-  (click)="selectVideo(video.id)"
+  (click)="selectVideo(video)"
 ></jb-video-card>
