--- a/src/app/dashboard/video-list/video-list.component.html
+++ b/src/app/dashboard/video-list/video-list.component.html
@@ -2,5 +2,6 @@
   *ngFor="let video of videoList"
   [video]="video"
   [selected]="video.id === selectedVideoId"
-  (click)="videoSelected.emit(video)"
+  routerLink=""
+  [queryParams]="{ id: video.id }"
 ></jb-video-card>
