Load selected video from service

--- a/src/app/dashboard/video-dashboard/video-dashboard.component.html
+++ b/src/app/dashboard/video-dashboard/video-dashboard.component.html
@@ -2,5 +2,5 @@
   [videoList]="(videos | async) || []"
   [selectedVideoId]="videoId | async"
 ></jb-video-list>
-<jb-video-player [video]="selectedVideo"></jb-video-player>
+<jb-video-player [video]="selectedVideo | async"></jb-video-player>
 <jb-stat-filters></jb-stat-filters>
